--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     height: 90vh;
-    background-image: url("../imagens/background_4.jpg");
+    background-image: url("background_4.jpg");
     background-size: cover;
     background-attachment: fixed;
     font-family: "Audiowide", sans-serif;
