--- a/style.css
+++ b/style.css
@@ -150,6 +150,8 @@ transform: rotate(360deg);
     color: #eee7e7;
     text-shadow: 3px 3px var(--cor-vermelho);
     text-align: center;
+
+    margin-top: 10%;
 }
 
 a{
@@ -170,11 +172,7 @@ a{
 
 .proj-image{
     width: 70%;
-    transition:
-    width 1s,
-    height 1s,
-    background-color 1s,
-    transform 1s;
+    transition: width 1s, height 1s, background-color 1s, transform 1s;
     border-radius: 60%;
     margin-top: 10px;
 }
@@ -183,4 +181,54 @@ a{
 .proj-name{
     color: white;
     text-shadow: 2px 2px var(--cor-azul);
+}
+
+.text-who-am-i{
+    font-size: 60px;
+    color: #eee7e7;
+    text-shadow: 3px 3px var(--cor-vermelho);
+    text-align: center;
+
+    margin-top: 10%;
+
+}
+
+.who-am-i{
+    background: rgba( 255, 255, 255, 0.35 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 13.5px );
+    -webkit-backdrop-filter: blur( 13.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+    display: flex;
+    align-items: center;
+
+    padding: 100px;
+
+    margin-right: 30%;
+    margin-left: 30%;
+}
+
+
+.photo {
+    flex: 0 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 150px; /* Ajuste o tamanho desejado */
+    height: 150px; /* Ajuste o tamanho desejado */
+    margin-right: 20px; /* Espaçamento entre a imagem e o texto */
+}
+
+.photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about-me {
+    flex: 1;
+   padding-left: 100px;
+    color: #eee7e7;
+    font-size: large;
 }
