--- a/style.css
+++ b/style.css
@@ -94,6 +94,8 @@ figure span.logo:hover {
 }
 
 .div-glass{  
+
+
     background: rgba( 255, 255, 255, 0.35 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 13.5px );
@@ -103,6 +105,15 @@ figure span.logo:hover {
 
     margin: 10px;
 
+    overflow:auto;
+    width: 300px; /* Defina a largura desejada para a sua div */
+    height: 330px; /* Defina a altura desejada para a sua div */
+    white-space: normal; /* Faz com que o texto quebre linhas conforme necessário */
+}
+
+.descr-proj-text{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
 }
 
 
@@ -161,6 +172,7 @@ a{
 
 /* CSS PROJETOS */
 .proj-line{
+
     display: flex;
     justify-content: center;
     padding: 0;
@@ -228,4 +240,14 @@ a{
     color: #eee7e7;
     font-size: large;
     text-align: center;
+}
+
+
+.div-glass::-webkit-scrollbar {
+    width: 1px; /* Largura da barra de rolagem */
+}
+
+
+.div-glass {
+    scrollbar-width: thin; /* Define a largura da barra de rolagem como fina (para Firefox) */
 }
