--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,186 +1,325 @@
 :root{
    
- --cor-vermelho: #A1342E;
- --cor-azul: #244256;
- 
-      
-}
-
-body {
-    height: 90vh;
-    background-image: url("../imagens/background_4.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: "Audiowide", sans-serif;
-}
-
-
-nav.menu-lateral {
-    width: 120px;
-    height: 100vh;
-    background-color: #000000cb;
-    padding: 30vh 0 0 0.01%;
-    box-shadow: 3px 0 0 #FEE0C0;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    overflow: hidden;
-    transition: 0.4s;
-
-    opacity: 0.9;
-}
-
-nav.menu-lateral:hover {
-    width: 400px;
-}
-
-ul {
-    height: 100%;
-    list-style-type: none;
-}
-
-ul li.item-menu {
-    transition: 0.5s;
-}
-
-ul li.item-menu:hover {
-    background-color: #FEE0C0;
-}
-
-ul li.item-menu a {
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 20px 5% 10px 15px;
-    display: flex;
-    line-height: 40px;
-}
-
-ul li.item-menu a:hover {
-    color: var(--cor-vermelho);
-    /*#A1342E*/
-    font-weight: bolder;
-}
-
-ul li.item-menu a .txt-link {
-    margin-left: 35px;
-}
-
-ul li.item-menu a .icon > i {
-    font-size: 30px;
-}
-
-span.logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-top: 5vh;
-    margin-left: 5vh;
-    width: 15vh;
-}
-
-figure span.logo > img {
-    width: 40%;
-    height: 40%;
-    margin-bottom: 0;
-    padding: 0;
-}
-
-figure span.logo:hover {
-    width: 40vh;
-    transition: 1s;
-}
-
-.div-glass{  
-    background: rgba( 255, 255, 255, 0.35 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 13.5px );
-    -webkit-backdrop-filter: blur( 13.5px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-
-    margin: 10px;
-
-}
-
-
-/* CSS TECNOLOGIAS */
-
-.text-myprojects {
-    font-size: 100px;
-    color: #eee7e7;
-    text-shadow: 3px 3px var(--cor-vermelho);
-    text-align: center;
-}
-
-.tech-line{
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    text-align: center;
-    align-items: center;
+    --cor-vermelho: #A1342E;
+    --cor-azul: #244256;
+    
+         
    }
-
-
-
-.tech-image{
-    width: 70%;
-    transition:
-    width 1s,
-    height 1s,
-    background-color 1s,
-    transform 1s;
-}
-
-.tech-image:hover{
-width: 75%;
--webkit-transform: rotate(360deg);
-transform: rotate(360deg);  
-}
-
-.tech-name{
-    color: white;
-    text-shadow: 2px 2px var(--cor-azul);
-}
-
-.text-mytechnologies{
-    font-size: 60px;
-    color: #eee7e7;
-    text-shadow: 3px 3px var(--cor-vermelho);
-    text-align: center;
-}
-
-a{
-    color: #eee7e7;
-    text-decoration: none;
-}
-
-/* CSS PROJETOS */
-.proj-line{
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    text-align: center;
-    align-items: center;
+   
+   body {
+       height: 90vh;
+       background-image: url("background_4.jpg");
+       background-size: cover;
+       background-attachment: fixed;
+       font-family: "Audiowide", sans-serif;
+       font-size: 16px;
    }
-
-
-
-.proj-image{
-    width: 70%;
-    transition:
-    width 1s,
-    height 1s,
-    background-color 1s,
-    transform 1s;
-    border-radius: 60%;
-    margin-top: 10px;
-}
-
-
-.proj-name{
-    color: white;
-    text-shadow: 2px 2px var(--cor-azul);
-}
+   
+   
+   nav.menu-lateral {
+       width: 120px;
+       height: 100vh;
+       background-color: #000000cb;
+       padding: 30vh 0 0 0.01%;
+       box-shadow: 3px 0 0 #FEE0C0;
+   
+       position: fixed;
+       top: 0;
+       left: 0;
+   
+       overflow: hidden;
+       transition: 0.4s;
+   
+       opacity: 0.9;
+   }
+   
+   nav.menu-lateral:hover {
+       width: 400px;
+   }
+   
+   ul {
+       height: 100%;
+       list-style-type: none;
+   }
+   
+   ul li.item-menu {
+       transition: 0.5s;
+   }
+   
+   ul li.item-menu:hover {
+       background-color: #FEE0C0;
+   }
+   
+   ul li.item-menu a {
+       color: white;
+       text-decoration: none;
+       font-size: 20px;
+       padding: 20px 5% 10px 15px;
+       display: flex;
+       line-height: 40px;
+   }
+   
+   ul li.item-menu a:hover {
+       color: var(--cor-vermelho);
+       /*#A1342E*/
+       font-weight: bolder;
+   }
+   
+   ul li.item-menu a .txt-link {
+       margin-left: 35px;
+   }
+   
+   ul li.item-menu a .icon > i {
+       font-size: 30px;
+   }
+   
+   span.logo {
+       position: absolute;
+       top: 0;
+       left: 0;
+       margin-top: 5vh;
+       margin-left: 5vh;
+       width: 15vh;
+   }
+   
+   figure span.logo > img {
+       width: 40%;
+       height: 40%;
+       margin-bottom: 0;
+       padding: 0;
+   }
+   
+   figure span.logo:hover {
+       width: 40vh;
+       transition: 1s;
+   }
+   
+   .div-glass{  
+   
+   
+       background: rgba( 255, 255, 255, 0.35 );
+       box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+       backdrop-filter: blur( 13.5px );
+       -webkit-backdrop-filter: blur( 13.5px );
+       border-radius: 10px;
+       border: 1px solid rgba( 255, 255, 255, 0.18 );
+   
+       margin: 10px;
+   
+       overflow:auto;
+       width: 300px; /* Defina a largura desejada para a sua div */
+       height: 330px; /* Defina a altura desejada para a sua div */
+       white-space: normal; /* Faz com que o texto quebre linhas conforme necessário */
+   }
+   
+   .descr-proj-text{
+       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+       font-size: 20px;
+   }
+   
+   
+   /* CSS TECNOLOGIAS */
+   
+   .text-myprojects {
+       font-size: 100px;
+       color: #eee7e7;
+       text-shadow: 3px 3px var(--cor-vermelho);
+       text-align: center;
+   }
+   
+   .tech-line{
+       display: flex;
+       justify-content: center;
+       padding: 0;
+       text-align: center;
+       align-items: center;
+      }
+   
+   
+   
+   .tech-image{
+       width: 70%;
+       transition:
+       width 1s,
+       height 1s,
+       background-color 1s,
+       transform 1s;
+   }
+   
+   .tech-image:hover{
+   width: 75%;
+   -webkit-transform: rotate(360deg);
+   transform: rotate(360deg);  
+   }
+   
+   .tech-name{
+       color: white;
+       text-shadow: 2px 2px var(--cor-azul);
+   }
+   
+   .text-mytechnologies{
+       font-size: 60px;
+       color: #eee7e7;
+       text-shadow: 3px 3px var(--cor-vermelho);
+       text-align: center;
+   
+       margin-top: 10%;
+   }
+   
+   a{
+       color: #eee7e7;
+       text-decoration: none;
+   }
+   
+   /* CSS PROJETOS */
+   .proj-line{
+   
+       display: flex;
+       justify-content: center;
+       padding: 0;
+       text-align: center;
+       align-items: center;
+      }
+   
+   
+   
+   .proj-image{
+       width: 70%;
+       transition: width 1s, height 1s, background-color 1s, transform 1s;
+       border-radius: 60%;
+       margin-top: 10px;
+   }
+   
+   #dif-image{
+       margin-top: 50px;
+       border-radius: 0;
+   }
+   
+   
+   .proj-name{
+       color: white;
+       text-shadow: 2px 2px var(--cor-azul);
+   }
+   
+   .text-who-am-i{
+       font-size: 60px;
+       color: #eee7e7;
+       text-shadow: 3px 3px var(--cor-vermelho);
+       text-align: center;
+   
+       margin-top: 10%;
+   
+   }
+   
+   .who-am-i {
+       background: rgba(255, 255, 255, 0.35);
+       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+       backdrop-filter: blur(13.5px);
+       -webkit-backdrop-filter: blur(13.5px);
+       border-radius: 10px;
+       border: 1px solid rgba(255, 255, 255, 0.18);
+       display: flex; 
+       flex-direction: column;
+       align-items: center; 
+       padding: 100px;
+       margin-right: 30%;
+       margin-left: 30%;
+       max-width: 90vh;
+   }
+   
+   .photo {
+       border-radius: 50%;
+       overflow: hidden;
+       width: 150px;
+       height: 150px;
+       margin-top: -75px; 
+   }
+   
+   .photo img {
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
+   }
+   
+   .about-me {
+       margin-top: 50px;
+       color: #eee7e7;
+       font-size: large;
+       text-align: center;
+   }
+   
+   
+   .div-glass::-webkit-scrollbar {
+       width: 1px; /* Largura da barra de rolagem */
+   }
+   
+   
+   .div-glass {
+       scrollbar-width: thin; /* Define a largura da barra de rolagem como fina (para Firefox) */
+   }
+   
+   
+   img {
+       max-width: 100%;
+       height: auto;
+   }
+   
+   
+   
+   /* Responsividade para telas menores (tablets e smartphones) */
+   @media (max-width: 768px) {
+       .proj-line, .tech-line {
+           flex-direction: column;
+           align-items: center;
+       }
+   
+       nav.menu-lateral {
+           width: 100%;
+           height: auto;
+           position: relative;
+           padding: 20px 0;
+       }
+   
+       nav.menu-lateral:hover {
+           width: 100%;
+       }
+   
+       .div-glass {
+           width: 90%;
+           margin: 10px auto;
+       }
+   
+       .text-myprojects, .text-mytechnologies, .text-who-am-i {
+           font-size: 40px;
+       }
+   
+       .who-am-i {
+           flex-direction: column;
+           margin: 0 5%;
+           padding: 20px;
+       }
+   
+       .about-me {
+           font-size: 20px;
+           text-align: center;
+       }
+   
+       .myprojects, .mytechnologies {
+           flex-direction: column;
+       }
+   
+       .project, .technology {
+           width: 80%;
+           margin: 10px auto;
+       }
+   
+       nav.menu-lateral {
+           display: none;
+       }
+   
+       .text-who-am-i{
+           margin-bottom: 65px;
+       }
+   
+   }
+   
