--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@
    }
    
    
-   nav.menu-lateral {
+   nav.menu-lateral { 
        width: 120px;
        height: 100vh;
        background-color: #000000cb;
@@ -192,7 +192,7 @@
    
    #dif-image{
        margin-top: 50px;
-       border-radius: 0;
+       border-radius: 60%;
    }
    
    
